--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,3 +1,9 @@
-<div id="root">
-  <h1>React is not Working!</h1>
-</div>
+<% if logged_in? %>
+    <script type="text/javascript">
+        window.currentUser = <%= render(
+            "api/users/user.json.jbuilder",
+            user: current_user
+        ).html_safe %>
+    </script>
+<% end %>
+<main id="root"></main>
