--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -8,12 +8,15 @@
 h1, h2 {
     font-weight: bold;
 }
+
 h1{
     font-size: 25px;
 }
+
 h2{
     font-size: 20px;
 }
+
 .SignIn-SignUp{
     display: flex; 
     justify-content: center;
@@ -24,6 +27,7 @@ h2{
     height: 500px;
     border: solid black 1px;
 }
+
 .splash-img1{
     background-image: image-url("img2.svg");
     height: 388px;
@@ -31,25 +35,49 @@ h2{
     float: left;
 
 }
+
 .splash-img2{
     background-image: image-url("img3.svg");
     height: 388px;
     width: 60%;
     float: left;
-
 }
+
+.splash-img3{
+    background-image: image-url("img4.svg");
+    height: 388px;
+    width: 60%;
+    float: left;
+}
+
 .img1{
     display: flex;
 }
+
 .splash{
     margin: auto;
-    width: 70%;
+    width: 60%;
     display: flex;
     flex-direction: column;;
 }
+
 .img-elements{
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 70%;
+}
+
+.img2{
+    display: flex;
+    align-items: center;
+;
+}
+.splash-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+    margin: auto;
 }
