--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -191,12 +191,11 @@ h2{
 }
 
 .logo{
-    padding-bottom: 50px;
     font-size: 50px;
-    // background-image: image-url("logo.png");
     background-size: cover;
     color: inherit;
     text-decoration: none;
+    padding-bottom: 16px;;
 }
 
 #sign-btn{
@@ -232,4 +231,12 @@ h2{
 }
 .getstartedbox{
 
+}
+
+.close-x{
+    margin-left: auto;
+}
+.close-x:hover{
+    margin-left: auto;
+    cursor: pointer;
 }
