fixed bug, errors not rendering on user sign in

--- a/app/assets/stylesheets/api/social_media.scss
+++ b/app/assets/stylesheets/api/social_media.scss
@@ -1,5 +1,5 @@
 .fa {
-  padding: 15px;
+  padding: 7px;
   font-size: 30px;
   width: 15px;
   text-align: center;
@@ -28,3 +28,10 @@
   background: #dd4b39;
   color: white;
 }
+
+.socialmedia{
+    display: flex;
+    justify-content: center;
+    padding: 10px
+}
+
