--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -100,6 +100,7 @@ h2{
     font-size: 20px;
     text-decoration: none;
     color: inherit;
+    font-family: 'Supermercado One', cursive;
 }
 
 .statement{
