--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -37,14 +37,17 @@ form > h2{
     flex-direction: column;
     align-items: center;
     height: auto;
-    background-color: cadetblue;
-    width: 110%;
-    border-radius: 35px;
+    background-color: white;
+    height: 101%;
+    width: 53%;
+    position: fixed;
+    border-radius: 11px;
 }
 
 .formtype{
     display: flex;
     justify-content: center;
+    align-items: center;;
 }
 
 // @keyframes slidein {
@@ -58,3 +61,9 @@ form > h2{
 //     width: 100%;
 //   }
 // }
+
+.modalcontents{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
