--- a/app/assets/stylesheets/api/social_media.scss
+++ b/app/assets/stylesheets/api/social_media.scss
@@ -28,6 +28,9 @@
   background: #dd4b39;
   color: white;
 }
+.fa-github{
+  background: rgb(231, 231, 231);
+}
 
 .socialmedia{
     display: flex;
