--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -1,21 +1,21 @@
-// .modal-background {
-//   position: fixed;
-//   top: 0;
-//   bottom: 0;
-//   right: 0;
-//   left: 0;
-//   background: rgba(255, 255, 255, 0.9);
-//   z-index: 10;
-// }
 .modal-background {
-  position: sticky;
-  top: 300px;
-  bottom: 150px;
-  right: 800px;
-  left: 800px;
-  background: rgba(255, 255, 255, 1.0);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.9);
   z-index: 10;
 }
+// .modal-background {
+//   position: sticky;
+//   top: 0px;
+//   bottom: 150px;
+//   right: 800px;
+//   left: 800px;
+//   background: rgba(255, 255, 255, 1.0);
+//   z-index: 10;
+// }
 
 .modal-child {
   position: absolute;
