--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -240,3 +240,9 @@ h2{
   display: inline-block;
   font-size: 200px;
 }
+
+.imga {
+    background-image: url('img2.svg');
+    background-repeat: no-repeat;
+    width: 500px
+}
