--- a/app/assets/stylesheets/createform.scss
+++ b/app/assets/stylesheets/createform.scss
@@ -1,9 +1,136 @@
 
 .createformbox{
     height: 500px;
-    width: 500px;
+    width: 550px;
     display: flex;
-    border: solid;
-    justify-content: center;
     align-items: center;
+    background-color: white;
+    border-radius: 5px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.newprojectform{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.newprojectformheader{
+    width: 90%;
+    height: 8%;
+    font-size: 22px;
+    color: #333333;
+    padding: 5%;
+    padding-bottom: 6px;
+    padding-top: 3%;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.newprojectformbody{
+    height: 84%;
+    display: flex;
+    flex-direction: column;
+    background-color: #f6f6f6;
+    overflow: hidden;
+    padding: 5%;
+    border: 1px solid #dddddd
+
+}
+
+.newprojectforminput{
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #333;
+    font-family: "Open Sans", open-sans, EmojiFontFace, sans-serif;
+    font-size: 14px;
+    line-height: 14px;
+    padding: 8px 16px;
+    width: 100%;
+}
+.newprojectforminput:hover{
+    border: 1px solid blue;
+}
+
+.projectnamelabel{
+    color: #666;
+    line-height: 24px;
+    font-size: 13px;
+    font-weight: 600;
+    display: block;
+}
+
+.newprojectformfooter{
+    padding: 7px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.createformbtn{
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    box-sizing: border-box;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    cursor: pointer;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0 2px;
+    touch-action: manipulation;
+    user-select: none;
+    white-space: nowrap;
+    transition-property: background-color, color, opacity;
+    transition-duration: 300ms;
+    transition-timing-function: ease-out;
+    font-size: 14px;
+    padding: 8px 10px;
+    background-color: #56AD56;
+    color: white;
+}
+
+.cancelbutton{
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    color: #333;
+    cursor: pointer;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0 2px;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    white-space: nowrap;
+    -webkit-transition-property: background-color, color, opacity;
+    transition-property: background-color, color, opacity;
+    -webkit-transition-duration: 300ms;
+    transition-duration: 300ms;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+    font-size: 14px;
+    padding: 8px 10px;
+}
+
+.cancelbutton:hover{
+    background-color: #f6f6f6;
+    color: #666;
+}
+
+.projectnameinput{
+    padding-bottom: 30px;;
 }
