--- a/app/assets/stylesheets/createform.scss
+++ b/app/assets/stylesheets/createform.scss
@@ -134,3 +134,30 @@
 .projectnameinput{
     padding-bottom: 30px;;
 }
+
+#users{
+    width: 100%;
+}
+#users option{
+    width: 100%;
+}
+
+.dashboardbody{
+    background-color: #F3F4F4;
+    min-height: 100vh;
+     min-width: 100vw;
+}
+
+select {
+    width: 100%;
+    padding: 5px;
+    font-size: 16px;
+    line-height: 1;
+    border: 0;
+    border-radius: 5px;
+    height: 34px;
+    background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png) no-repeat right #ccc;
+    -webkit-appearance: none;
+    background-position-x: 471px;
+    background-color: white;
+}
