--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,5 +1,4 @@
 .dashboard{
-    background-color: gray;
     top: 0;
     right: 0;
     bottom: 0;
@@ -8,7 +7,7 @@
 
 .loggedinnav-bar{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background: #256188;
     height: 35px;
@@ -62,4 +61,83 @@
 
 .colorchange{
     color: black;
+}
+
+.buttonrow{
+    background-color: white;    
+    height: 53px;
+    border-bottom: 1px solid #dddddd;
+}
+
+.buttoncontainer{
+    height: 100%;
+    width: 65%;
+    margin: auto;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.Create-Project-btn{
+    background: #fff;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #333;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0 2px;
+    padding: 8px 10px;
+    text-align: center;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    -webkit-transition-property: background-color, color, opacity;
+    background-color: #56ad55;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.Create-Project-btn:hover{
+    background: #fff;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #333;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0 2px;
+    padding: 8px 10px;
+    text-align: center;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    background-color: #448A44;
+    color: #fff;
+    background-color: #448A44;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
