--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -12,6 +12,8 @@
     background: #256188;
     height: 35px;
     color: white;
+    padding-right: 25px;
+    padding-left: 25px;
 }
 
 .loggedinProject-Name{
@@ -26,8 +28,32 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
+      right: 0px;
+  left: auto;
+}
+.dropdown-content1-logged-in{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+      right: 0px;
+  left: auto;
 }
 
+.dropdown-content1-logged-in-show{
+    display: block;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    right: 0px;
+    left: auto;
+}
 .dropdown-content-logged-in-show{
     display: block;
     position: absolute;
@@ -36,6 +62,7 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
+
 }
 
 .dd-list-item{
@@ -74,7 +101,8 @@
     width: 65%;
     margin: auto;
     display: flex;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .Create-Project-btn{
@@ -140,4 +168,43 @@
     background-color: #448A44;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.searchbar{
+    width: 100%;
+    height: 166px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashboardtab{
+    cursor: pointer;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 0px 16px;
+    font-weight: 400;
+    border-bottom: 3px solid #ED7D1A;
+    color: #333;
+}
+
+.dashboardtabcontainer{
+    height: 100%;
+    display: flex;
+}
+
+.projectpanelbody{
+    min-height: 100vh;
+}
+
+.projectpanelheader{
+    height: 55px;
+    display: flex;
+    align-items: center;
+}
+
+.projectpanelseparator{
+    padding-left: 10px;
+    padding-right: 10px;
 }
