--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -145,7 +145,6 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     color: #333;
-    cursor: pointer;
     display: inline-block;
     font-size: 14px;
     font-weight: 400;
@@ -168,6 +167,7 @@
     background-color: #448A44;
     margin-top: 10px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .searchbar{
@@ -176,6 +176,33 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.searchbarform{
+    width: 100%;
+    display: flex;
+    padding: 1px;
+    border-width: 1px;
+    border-style: inset;
+    border-color: initial;
+    border-image: initial;
+}
+
+
+
+.inputbox:focus{
+    border: 1px solid #3b99fc;
+    // outline: 2px solid #3b99fc;
+}
+
+.inputbox{
+    width: 100%;
+    height: 30px;
+    padding: 0;
+    border-width: 0;
+    border-style: 0;
+    border-color: initial;
+    border-image: initial;
+    padding-left: 25px;
 }
 
 .dashboardtab{
@@ -207,4 +234,11 @@
 .projectpanelseparator{
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.fa-bars{
+    padding-left: 0px;
+}
+.fa-search{
+    position: absolute;
 }
