--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -112,7 +112,7 @@
     border-radius: 2px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    color: #333;
+    color: white;
     cursor: pointer;
     display: inline-block;
     font-size: 14px;
@@ -222,7 +222,7 @@
 }
 
 .projectpanelbody{
-    min-height: 65vh;
+    min-height: 50vh;
 }
 
 .projectpanelheader{
