--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -3,6 +3,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    width: 50%;
 }
 
 .loggedinnav-bar{
@@ -47,7 +48,7 @@
     display: block;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 60px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
@@ -60,7 +61,6 @@
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
     z-index: 1;
 
 }
@@ -82,8 +82,11 @@
 }
 
 .logo-logged-in{
- display: flex;
- align-items: center;   
+    display: flex;
+    align-items: center;   
+    font-size: 13px;
+    font-family: 'Open Sans', open-sans, Helvetica, Arial, EmojiFontFace, sans-serif;
+    color: #CADCE4;
 }
 
 .colorchange{
@@ -98,7 +101,7 @@
 
 .buttoncontainer{
     height: 100%;
-    width: 65%;
+    width: 50%;
     margin: auto;
     display: flex;
     align-items: center;
@@ -194,7 +197,7 @@
 
 .inputbox{
     width: 100%;
-    height: 30px;
+    height: 35px;
     padding: 0;
     border-width: 0;
     border-style: 0;
@@ -203,6 +206,7 @@
     padding-left: 25px;
     border-radius: 3px;
     outline-width: thin;
+    border: 1px solid #ccc;
 }
 
 .dashboardtab{
@@ -222,7 +226,7 @@
 }
 
 .projectpanelbody{
-    min-height: 50vh;
+    min-height: 40vh;
 }
 
 .projectpanelheader{
@@ -241,4 +245,10 @@
 }
 .fa-search{
     position: absolute;
+}
+
+.fa-archive{
+    color: gray;
+    cursor: pointer;
+    padding-right: 15px;
 }
