--- a/app/assets/stylesheets/project_tiles.scss
+++ b/app/assets/stylesheets/project_tiles.scss
@@ -8,7 +8,7 @@
     width: 48%;
     height: 135px;
     background-color: white;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     border: 2px solid #EFEFEF;
 }
 
@@ -17,7 +17,7 @@
     border-bottom: 2px solid #EFEFEF;
     display: flex;
     align-items: center;
-    padding-left: 40px;
+    padding-left: 15px;
 
 }
 
@@ -40,4 +40,24 @@
     font-family: "Open Sans", open-sans, EmojiFontFace, sans-serif;
     font-size: 14px;
     color: #666;
+}
+
+.dropdown-contentarchive{
+  visibility: hidden;
+  position: absolute;
+  background-color: #38474F;
+  width: fit-content;
+  height: fit-content;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
+  border-radius: 3px;
+}
+.dropdown:hover .dropdown-contentarchive {
+  visibility: visible;
+  opacity: 1;
+  cursor: pointer;
 }
