--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -102,3 +102,29 @@
 .navbarlistfooterwrapper:hover{
   background: #E3E1DC;
 }
+
+.dropdown1 {
+  position: relative;
+  display: inline-block;
+  align-self: center;
+  justify-items: center;
+}
+
+.dropdown-content1 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+
+}
+.dropdown1:hover{
+    cursor: pointer;
+}
+
+.dropdown1:hover .dropdown-content1 {
+  display: block;
+  cursor: pointer;
+}
