--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -89,6 +89,8 @@
   width: 160px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  color: #7B725E
 }
 
 .navbarlistfooterwrapper{
@@ -114,11 +116,9 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  min-width: 145px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-
 }
 .dropdown1:hover{
     cursor: pointer;
@@ -126,5 +126,31 @@
 
 .dropdown1:hover .dropdown-content1 {
   display: block;
+  cursor: pointer;
+}
+
+.dropdownlogout{
+  border: none;
+}
+.dropdownlogout:hover{
+  cursor: pointer;
+  background-color: gray;
+}
+#clickDropDown2{
+  right: 0;
+  left: auto;
+  height: fit-content;
+  color: black;
+  line-height: 32px;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  cursor: text;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.profilelistitme:hover{
+  background-color: gray;
   cursor: pointer;
 }
