--- a/app/assets/stylesheets/project_tiles.scss
+++ b/app/assets/stylesheets/project_tiles.scss
@@ -55,6 +55,7 @@
   opacity: 0;
   transition: visibility 0s, opacity 0.5s linear;
   border-radius: 3px;
+  color: white;
 }
 .dropdown:hover .dropdown-contentarchive {
   visibility: visible;
