added favorite button, conditionals needed

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -81,6 +81,7 @@ h2{
     height: 650px;
     width: 1122px;
     background-color: white;
+    background-image: image-url("/splash.png");
 }
 .modalbg1{
     height: 650px;
