update project show page

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -78,6 +78,13 @@
 
 .navbarlistitem{
   padding: 5px;
+  text-decoration: none !important; 
+
+}
+
+.projectlistitemlink{
+  text-decoration: none;
+  color: black;
 }
 
 .navbarlistitem:hover{
