--- a/app/assets/stylesheets/story_index.scss
+++ b/app/assets/stylesheets/story_index.scss
@@ -3,7 +3,8 @@
     min-height: 96vh;
     min-width: 33%;
     background-color: #484f57;
-    margin-left: 5px
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .storyindexitem{
@@ -19,9 +20,6 @@
     align-items: center;;
 }
 
-.ProjectShowPage{
-    background-color: #212121;
-}
 
 .storyitembox{
     display: flex;
@@ -50,4 +48,10 @@
 }
 .storyinput{
     width: -webkit-fill-available;
+}
+.ProjectShowPageHeader{
+    display: flex;
+    color: white;
+    justify-content: center;
+    font-size: 20px;
 }
