--- a/app/assets/stylesheets/story_index.scss
+++ b/app/assets/stylesheets/story_index.scss
@@ -1,7 +1,8 @@
 .Current, .Icebox, .Done{
        border: 1px solid black;
     min-height: 96vh;
-    min-width: 33%;
+    min-width: 30%;
+    max-width: 100%;
     background-color: #484f57;
     margin-left: 5px;
     margin-right: 5px;
@@ -55,4 +56,10 @@
     color: white;
     justify-content: center;
     font-size: 20px;
+}
+
+.Sidepanel{
+    min-width: 10%;
+    background-color: #2f3337;
+    color: white;
 }
