will add sidebartext toggle

--- a/app/assets/stylesheets/project_show.scss
+++ b/app/assets/stylesheets/project_show.scss
@@ -9,11 +9,11 @@
     width: 300px
 }
 
-.Icebox{
-    border: 1px solid black;
-    height: 100vh;
-    width: 300px
-}
+// .Icebox{
+//     border: 1px solid black;
+//     height: 100vh;
+//     width: 300px
+// }
 
 .storycolheader{
     display: flex;
