will add favicon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="/favicon.ico?v=2" />
     <title>TrackMania</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
