will fix project story bucket column width from changing

--- a/app/assets/stylesheets/story_index.scss
+++ b/app/assets/stylesheets/story_index.scss
@@ -67,3 +67,11 @@
 .fa-trash{
     cursor: pointer;
 }
+
+.buckets{
+    width: 100%;
+    display: flex;
+}
+.Current, .Icebox, .Done{
+    width: 33%;
+}
