--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -66,7 +66,7 @@
 
 .navbarlistheader{
     height: 32px;
-    background-color: #908674;
+    background-color: rgb(138, 199, 255);
     line-height: 32px;
     font-size: 12px;
     font-weight: 600;
@@ -88,7 +88,7 @@
 }
 
 .navbarlistitem:hover{
-  background-color: #b2aba1;
+  background-color: grey;
 }
 
 .navbarlistfooter{
@@ -97,7 +97,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #7B725E
+  color:black;
 }
 
 .navbarlistfooterwrapper{
@@ -109,7 +109,7 @@
 }
 
 .navbarlistfooterwrapper:hover{
-  background: #E3E1DC;
+  background: gray;
 }
 
 .dropdown1 {
@@ -126,7 +126,10 @@
   min-width: 145px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  animation: menu1 1s;
 }
+
+
 .dropdown1:hover{
     cursor: pointer;
 }
@@ -163,7 +166,7 @@
 }
 
 #createproject{
-  color: #7B725E;
+  color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -171,8 +174,8 @@
 }
 
 #refresh{
-  border-bottom: 1px solid #7B725E;
-  color: #7B725E;
+  border-bottom: 1px solid black;
+  color: black;
   height: 20px;
   display: flex;
   justify-content: center;
@@ -187,4 +190,15 @@
 
 #navbarname{
   font-size: 18px;
+}
+@keyframes menu1 {
+  0%
+  {
+    opacity: 0;
+  }
+  100% 
+  {
+    opacity: 1;
+  }
+
 }
