will adjust dropdown menu

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -87,6 +87,7 @@
     font-size: 13px;
     font-family: 'Open Sans', open-sans, Helvetica, Arial, EmojiFontFace, sans-serif;
     color: #CADCE4;
+    height: 35px;
 }
 
 .colorchange{
