will fix some bugs

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -171,6 +171,7 @@
   justify-content: space-between;
   align-items: center;
   padding-top: 0px;
+  border-bottom: 1px solid black;
 }
 
 #refresh{
