will add updates to story page

--- a/app/assets/stylesheets/story_index.scss
+++ b/app/assets/stylesheets/story_index.scss
@@ -29,7 +29,6 @@
 
 .fa-trash{
     border: none;
-    background-color: #f4f4f4;
 }
 
 .AddStoryFormIcon{
@@ -73,4 +72,21 @@
 }
 .Current, .Icebox, .Done{
     width: 33%;
+}
+
+.story-item-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 64px;
+}
+
+#edit, #trash{
+    cursor: pointer;
+    height: 32px;
+}
+
+#edit:hover, #trash:hover {
+    background-color: #484f57;
 }
